fixed alignment

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
-    margin: 0 20px;
+    margin: 0;
     padding: 40px 0;
     display: flex;
     flex-flow: row wrap;
